tests/invalid/error_in_list.err_exp
error_in_list.m:015: In clause for function `f'/0:
error_in_list.m:015:   in function result term of clause head:
error_in_list.m:015:   in list element #5:
error_in_list.m:015:   type error in unification of argument
error_in_list.m:015:   and constant `"five"'.
error_in_list.m:015:   argument has type
error_in_list.m:015:     [38;5;203mint,[39;49m
error_in_list.m:015:   constant `"five"' has type
error_in_list.m:015:     [38;5;40mstring.[39;49m
error_in_list.m:015: In clause for function `f'/0:
error_in_list.m:015:   in function result term of clause head:
error_in_list.m:015:   in list element #7:
error_in_list.m:015:   type error in unification of argument
error_in_list.m:015:   and constant `7.0'.
error_in_list.m:015:   argument has type
error_in_list.m:015:     [38;5;203mint,[39;49m
error_in_list.m:015:   constant `7.0' has type
error_in_list.m:015:     [38;5;40mfloat.[39;49m
For more information, recompile with `-E'.
